Adding reservation and other lists for user.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "berry-material-react-free",
     "version": "3.2.0",
     "private": true,
-    "homepage": "https://example.com/myapp",
+    "homepage": "https://example.com/orion",
     "dependencies": {
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.9.3",
@@ -19,6 +19,7 @@
         "framer-motion": "^6.3.16",
         "http-proxy-middleware": "^1.0.6",
         "material-ui-popup-state": "^4.0.1",
+        "mui-datatables": "^4.2.2",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-apexcharts": "^1.4.0",
@@ -79,7 +80,7 @@
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "4.6.0",
         "prettier": "^2.7.1",
-        "sass": "^1.53.0",
-        "proxy": "http://localhost:9090"
-    }
+        "sass": "^1.53.0"
+    },
+    "proxy": "http://localhost:9090"
 }
